integrated strapi to serve events and images

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,14 @@
       rel="stylesheet"
     />
 
-   
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+(function(){
+  emailjs.init("user_lqLr167J4YsZhVWPD9Ew4");
+})();
+</script>
   
   
     <title>Paper Kit React by Creative Tim</title>
